--- a/src/components/championsData/championsData.scss
+++ b/src/components/championsData/championsData.scss
@@ -1,38 +1,67 @@
+h1 {
+  color: white;
+}
+
+// .search {
+//   &__input {
+
+//   }
+// }
+
 .champions {
   &__wrapper {
+    // background-color: white;
     height: 100%;
     width: 100%;
     display: flex;
-    gap: 10px 20px;
-
+    gap: 20px 26px;
     flex-wrap: wrap;
     max-width: 1280px;
     margin: 0 auto;
   }
 
   &__item {
+    // border: 2px solid red;
     display: flex;
     flex-direction: column;
     text-align: center;
-    width: 280px;
+    width: 222px;
     height: 280px;
     background-size: cover;
     white-space: nowrap;
     font-size: 14px;
     gap: 2px;
-
-    &__image {
-      width: 100%;
-      height: 100%;
-    }
-
-    &__name {
-      width: 100%;
-      height: 30px;
-    }
   }
 }
 .item__image {
   width: 100%;
   height: 100%;
+  background-position: center;
+  background-size: cover;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: column-reverse;
+  border-radius: 5px;
+  &:hover {
+    transform: scale(1.23, 1.14);
+    transition: 0.6s;
+    box-shadow: 1px 0px 70px 45px rgba(249, 247, 207, 1);
+    div {
+      font-size: 32px;
+      line-height: 50px;
+      height: 50px;
+      transition: 0.5s;
+      // background-color: wheat;
+    }
+  }
+  div {
+    font-size: 20px;
+    color: white;
+    background-color: rgb(95, 93, 90);
+    font-style: italic;
+  }
+}
+
+.product {
+  text-decoration: none;
 }
