--- a/src/components/championsData/championsData.scss
+++ b/src/components/championsData/championsData.scss
@@ -2,61 +2,57 @@ h1 {
   color: white;
 }
 
-.champions {
-  &__wrapper {
-    // background-color: white;
-    height: 100%;
-    width: 100%;
+.champions-list {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  max-width: 1280px;
+  margin: 0 auto;
+  .product {
+    text-decoration: none;
     display: flex;
-    gap: 20px 26px;
-    flex-wrap: wrap;
-    max-width: 1280px;
-    margin: 0 auto;
-  }
-
-  &__item {
-    // border: 2px solid red;
-    display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     text-align: center;
     width: 222px;
     height: 280px;
     background-size: cover;
     white-space: nowrap;
     font-size: 14px;
-    gap: 2px;
-  }
-}
-.item__image {
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  text-transform: uppercase;
-  display: flex;
-  flex-direction: column-reverse;
-  border-radius: 5px;
-  &:hover {
-    transform: scale(1.23, 1.14);
-    transition: 0.6s;
-    box-shadow: 1px 0px 70px 75px rgb(0, 0, 0);
-    div {
-      font-size: 32px;
-      line-height: 50px;
-      height: 50px;
-      transition: 0.5s;
-      text-shadow: 0px 0px 6px rgb(254, 254, 254);
-      // background-color: wheat;
+    margin-top: 30px;
+
+    .item {
+      &__image {
+        width: 100%;
+        height: 280px;
+        background-position: center;
+        background-size: cover;
+        text-transform: uppercase;
+        display: flex;
+        flex-direction: column-reverse;
+        border-radius: 5px;
+
+        &:hover {
+          transform: scale(1.23, 1.14);
+          transition: 0.6s;
+          box-shadow: 1px 0px 70px 75px rgb(0, 0, 0);
+          div {
+            font-size: 32px;
+            line-height: 50px;
+            height: 50px;
+            transition: 0.5s;
+            text-shadow: 0px 0px 6px rgb(254, 254, 254);
+            // background-color: wheat;
+          }
+        }
+        div {
+          font-size: 20px;
+          color: white;
+          background-color: rgb(95, 93, 90);
+          font-style: italic;
+        }
+      }
     }
   }
-  div {
-    font-size: 20px;
-    color: white;
-    background-color: rgb(95, 93, 90);
-    font-style: italic;
-  }
-}
-
-.product {
-  text-decoration: none;
 }
