--- a/src/pages/champion/champion.scss
+++ b/src/pages/champion/champion.scss
@@ -43,7 +43,7 @@
     text-align: center;
 
     span {
-      padding: 5px 25px;
+      padding: 8px 35px;
       margin: 0 auto;
       background-color: black;
       border-top-left-radius: 30px;
@@ -61,8 +61,9 @@
     border-left: 13px groove goldenrod;
     &__opis {
       margin: 0 auto;
-      // border: 1px solid silver;
-      border: 10px double goldenrod;
+      border: 10px double rgb(80, 79, 79);
+      // border: 10px ridge rgb(80, 79, 79);
+      // border: 10px groove rgb(80, 79, 79);
       margin-top: 25px;
       color: white;
       font-size: 20px;
@@ -75,10 +76,10 @@
     }
     &__champion-history {
       margin: 0 auto;
-      // border: 1px solid silver;
-      border-left: 10px double goldenrod;
-      border-right: 10px double goldenrod;
-
+      border-left: 10px double rgb(80, 79, 79);
+      border-right: 10px double rgb(80, 79, 79);
+      // border-left: 10px groove rgb(80, 79, 79);
+      // border-right: 10px groove rgb(80, 79, 79);
       color: white;
       font-size: 20px;
       font-family: "Lora", serif;
@@ -94,7 +95,8 @@
     .wrapper-smaller {
       width: 80%;
       margin: 0 auto;
-      border: 10px double goldenrod;
+      border: 10px double rgb(80, 79, 79);
+      // border: 10px inset rgb(80, 79, 79);
       padding: 30px;
       margin-bottom: 50px;
       border-top: none;
