--- a/src/components/championsData/championsData.scss
+++ b/src/components/championsData/championsData.scss
@@ -6,11 +6,14 @@ h1 {
   height: 100%;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  // justify-content: space-between;
+
   flex-wrap: wrap;
   max-width: 1280px;
   margin: 0 auto;
+  align-items: flex-start;
   .product {
+    margin: 17px;
     text-decoration: none;
     display: flex;
     flex-direction: column-reverse;
@@ -32,25 +35,26 @@ h1 {
         display: flex;
         flex-direction: column-reverse;
         border-radius: 5px;
-
+        border: 1.5px solid #7e633b;
+        div {
+          font-size: 20px;
+          color: white;
+          background-color: rgb(22, 22, 22);
+          font-style: italic;
+          border-top: 1.5px solid #7e633b;
+        }
         &:hover {
           transform: scale(1.23, 1.14);
-          transition: 0.6s;
+          transition: 0.7s;
           box-shadow: 1px 0px 70px 75px rgb(0, 0, 0);
           div {
             font-size: 32px;
             line-height: 50px;
             height: 50px;
-            transition: 0.5s;
+            transition: 0.7s;
             text-shadow: 0px 0px 6px rgb(254, 254, 254);
             // background-color: wheat;
           }
-        }
-        div {
-          font-size: 20px;
-          color: white;
-          background-color: rgb(95, 93, 90);
-          font-style: italic;
         }
       }
     }
