--- a/src/components/skinsSlider/skillsSlider.scss
+++ b/src/components/skinsSlider/skillsSlider.scss
@@ -1,3 +1,5 @@
+$title-size: 30px;
+$lora: "Lora", serif;
 .slider {
   position: relative;
   overflow: hidden;
@@ -34,4 +36,10 @@
 .slick-slider {
   margin-top: 50px;
   margin-bottom: 100px;
+}
+h4 {
+  text-align: center;
+  color: white;
+  font-size: $title-size;
+  font-family: $lora;
 }
