--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -11,7 +11,6 @@
   border: 1.5px solid #7e633b;
   .type-list {
     display: flex;
-    justify-content: space-between;
     width: 50%;
 
     li {
@@ -31,10 +30,124 @@
   }
 }
 
-.search-input {
-  background-color: black;
-  color: white;
-  &:focus {
-    border: 1px solid red;
+.input-container {
+  position: relative;
+  width: 200px;
+
+  input {
+    width: 100%;
+    padding: 10px 20px;
+    border: 1px solid gray;
+    background-color: black;
+    border-radius: 5px;
+    outline: none;
+    color: white;
+    &:valid ~ span,
+    &:focus ~ span {
+      // font-weight: 600;
+
+      color: #ccaa76;
+      transform: translateX(55px) translateY(-3px);
+      font-size: 0.5em;
+      padding: 0 10px;
+      background-color: black;
+      border-right: 1px solid #7e633b;
+      border-left: 1px solid #7e633b;
+      letter-spacing: 0.2em;
+      transition: 0.5s;
+    }
+  }
+
+  span {
+    font-size: 12px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    pointer-events: none;
+    color: white;
+    text-transform: uppercase;
+  }
+}
+@media (max-width: 320px) {
+  .navbar {
+    height: 50px;
+    margin: 0 auto;
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .type-list {
+      display: flex;
+      width: 20%;
+
+      li {
+        font-size: 4px;
+        font-weight: 500;
+      }
+    }
+  }
+
+  .input-container {
+    position: relative;
+    width: 20px;
+
+    input {
+      height: 0.5em;
+      width: 50%;
+      &:valid ~ span,
+      &:focus ~ span {
+        color: #ccaa76;
+        transform: translateX(15px) translateY(-3px);
+        font-size: 0.1em;
+        padding: 0 10px;
+      }
+    }
+
+    span {
+      font-size: 4px;
+    }
+  }
+}
+@media (max-width: 480px) {
+  .navbar {
+    height: 50px;
+    margin: 0 auto;
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .type-list {
+      display: flex;
+      width: 20%;
+
+      li {
+        font-size: 4px;
+        font-weight: 500;
+      }
+    }
+  }
+
+  .input-container {
+    position: relative;
+    width: 20px;
+
+    input {
+      height: 0.5em;
+      width: 50%;
+      &:valid ~ span,
+      &:focus ~ span {
+        color: #ccaa76;
+        transform: translateX(15px) translateY(-3px);
+        font-size: 0.1em;
+        padding: 0 10px;
+      }
+    }
+
+    span {
+      font-size: 4px;
+    }
   }
 }
