--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -1,6 +1,14 @@
 .layout {
   // background-color: white;
-  max-width: 1440px;
+  max-width: 1540px;
   height: 100%;
   margin: 0 auto;
 }
+// @media (max-width: 320px) {
+//   .layout {
+//     // background-color: white;
+//     max-width: 340px;
+//     height: 100%;
+//     margin: 0 auto;
+//   }
+// }
