--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,30 +1,44 @@
 .navbar {
-  height: 70px;
-  margin: 0 auto;
-  width: 80%;
+  position: fixed;
+  height: 100px;
+  left: 5%;
+  right: 5%;
+  width: 90%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  background-color: black;
+  z-index: 1;
+  background-color: rgba(26, 25, 34);
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   border: 1.5px solid #7e633b;
+
+  .logo {
+    background-image: url("./logos/League-of-Info-m.png");
+    background-position: center;
+    background-size: 100%;
+    margin-left: 3%;
+    width: 20%;
+    height: 50px;
+  }
   .type-list {
     display: flex;
     width: 50%;
+    justify-content: center;
+    padding-right: 20px;
 
     li {
-      background-color: black;
+      background-color: rgb(26, 25, 34);
       color: white;
       border: none;
-      padding: 10px 2%;
+      padding: 10px 1%;
       margin: 20px 0px;
-      font-size: 16px;
+      font-size: 20px;
       text-transform: uppercase;
       list-style: none;
       font-weight: 600;
       &:hover {
         cursor: pointer;
+        color: #d59930;
       }
     }
   }
@@ -38,10 +52,11 @@
     width: 100%;
     padding: 10px 20px;
     border: 1px solid gray;
-    background-color: black;
+    background-color: rgb(26, 25, 34);
     border-radius: 5px;
     outline: none;
     color: white;
+
     &:valid ~ span,
     &:focus ~ span {
       // font-weight: 600;
@@ -50,7 +65,7 @@
       transform: translateX(55px) translateY(-3px);
       font-size: 0.5em;
       padding: 0 10px;
-      background-color: black;
+      background-color: rgb(26, 25, 34);
       border-right: 1px solid #7e633b;
       border-left: 1px solid #7e633b;
       letter-spacing: 0.2em;
@@ -59,6 +74,8 @@
   }
 
   span {
+    transition: 0.5s;
+
     font-size: 12px;
     position: absolute;
     top: 0;
@@ -77,7 +94,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    .logo {
+      background-image: url("./logos/League-of-Info-mini.png");
+      background-position: center;
+      background-size: 20%;
+      background-repeat: no-repeat;
+      margin-left: 3%;
+      width: 50%;
+      height: 50px;
+    }
     .type-list {
       display: flex;
       width: 20%;
@@ -110,33 +135,32 @@
     }
   }
 }
-@media (max-width: 480px) {
+@media (min-width: 321px) and (max-width: 375px) {
   .navbar {
     height: 50px;
-    margin: 0 auto;
-    width: 95%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    left: 0;
+    right: 0;
+    width: 99%;
 
     .type-list {
       display: flex;
-      width: 20%;
-
+      width: 60%;
+      padding-left: 20px;
+      padding-right: 30px;
       li {
-        font-size: 4px;
-        font-weight: 500;
+        font-size: 6px;
+        font-weight: 700;
       }
     }
   }
 
   .input-container {
     position: relative;
-    width: 20px;
+    width: 30%;
 
     input {
-      height: 0.5em;
-      width: 50%;
+      height: 0.1em;
+      width: 40%;
       &:valid ~ span,
       &:focus ~ span {
         color: #ccaa76;
@@ -148,6 +172,224 @@
 
     span {
       font-size: 4px;
+    }
+  }
+}
+@media (min-width: 375px) and (max-width: 480px) {
+  .navbar {
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    height: 50px;
+    width: 99%;
+    .logo {
+      background-repeat: no-repeat;
+    }
+    .type-list {
+      width: 70%;
+      padding: 0 10px;
+
+      li {
+        font-size: 7px;
+        font-weight: 700;
+      }
+    }
+  }
+
+  .input-container {
+    width: 30%;
+
+    input {
+      height: 0.1em;
+      width: 40%;
+      &:valid ~ span,
+      &:focus ~ span {
+        color: #ccaa76;
+        transform: translateX(10px) translateY(0px);
+        font-size: 4px;
+        padding: 0 10px;
+      }
+    }
+
+    span {
+      font-size: 5px;
+    }
+  }
+}
+@media (min-width: 481px) and (max-width: 720px) {
+  .navbar {
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    height: 70px;
+    width: 95%;
+
+    .type-list {
+      width: 70%;
+      padding: 0 10px;
+      li {
+        font-size: 8px;
+      }
+    }
+  }
+
+  .input-container {
+    input {
+      height: 0.2em;
+      width: 40%;
+      &:valid ~ span,
+      &:focus ~ span {
+        color: #ccaa76;
+        transform: translateX(15px) translateY(-1px);
+        font-size: 5px;
+        padding: 0 10px;
+      }
+    }
+
+    span {
+      font-size: 7px;
+    }
+  }
+}
+@media (min-width: 721px) and (max-width: 900px) {
+  .navbar {
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    height: 70px;
+    width: 95%;
+    .logo {
+      background-image: url("./logos/League-of-Info-s.png");
+      background-position: center;
+      background-size: 110%;
+      background-repeat: no-repeat;
+      margin-left: 3%;
+      width: 20%;
+      height: 50px;
+    }
+    .type-list {
+      display: flex;
+      width: 70%;
+      padding: 0 10px;
+      li {
+        font-size: 11px;
+        font-weight: 600;
+      }
+    }
+  }
+
+  .input-container {
+    input {
+      height: 0.1em;
+      font-size: 10px;
+      width: 40%;
+      &:valid ~ span,
+      &:focus ~ span {
+        color: #ccaa76;
+        transform: translateX(15px) translateY(0px);
+        font-size: 5px;
+        padding: 0 10px;
+      }
+    }
+
+    span {
+      font-size: 6px;
+    }
+  }
+}
+
+@media (min-width: 901px) and (max-width: 1080px) {
+  .navbar {
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    height: 70px;
+    width: 95%;
+    .logo {
+      background-image: url("./logos/League-of-Info-s.png");
+      background-position: center;
+      background-size: 110%;
+      background-repeat: no-repeat;
+      margin-left: 3%;
+      width: 20%;
+      height: 50px;
+    }
+
+    .type-list {
+      display: flex;
+      width: 70%;
+      padding: 0 10px;
+      li {
+        font-size: 13px;
+        font-weight: 600;
+      }
+    }
+  }
+
+  .input-container {
+    input {
+      height: 0.4em;
+      font-size: 10px;
+      width: 40%;
+      &:valid ~ span,
+      &:focus ~ span {
+        color: #ccaa76;
+        transform: translateX(15px) translateY(-1px);
+        font-size: 5px;
+        padding: 0 10px;
+      }
+    }
+
+    span {
+      font-size: 6px;
+    }
+  }
+}
+
+@media (min-width: 1081px) and (max-width: 1440px) {
+  .navbar {
+    margin: 0 auto;
+    height: 70px;
+    .logo {
+      background-image: url("./logos/League-of-Info-m.png");
+      background-position: center;
+      background-size: 100%;
+      background-repeat: no-repeat;
+      margin-left: 3%;
+      width: 20%;
+      height: 50px;
+    }
+    .type-list {
+      display: flex;
+      width: 70%;
+      padding: 0 10px;
+
+      li {
+        font-size: 13px;
+        font-weight: 700;
+      }
+    }
+  }
+
+  .input-container {
+    position: relative;
+
+    width: 30%;
+
+    input {
+      height: 0.4em;
+      width: 40%;
+      &:valid ~ span,
+      &:focus ~ span {
+        color: #ccaa76;
+        transform: translateX(15px) translateY(-3px);
+        font-size: 5px;
+        padding: 0 10px;
+      }
+    }
+
+    span {
+      font-size: 7px;
     }
   }
 }
