--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,10 @@ body {
   background-color: black;
   width: 100%;
   height: 100%;
+  background-image: url("./layout/backgr.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  // background-color: black;
 }
 
 code {
