--- a/src/pages/champion/champion.scss
+++ b/src/pages/champion/champion.scss
@@ -5,6 +5,7 @@ $dark-gold: #7e633b;
   width: 100%;
   display: flex;
   flex-direction: column;
+  background-color: black;
 
   .profile {
     position: relative;
