--- a/src/components/championsData/championsData.scss
+++ b/src/components/championsData/championsData.scss
@@ -1,5 +1,6 @@
 $lora: "Lora", serif;
 $dark-gold: #7e633b;
+$light-gold: #da9f47;
 .nav-back {
   height: 100px;
   // background-color: rgba(26, 25, 34);
@@ -9,7 +10,7 @@ $dark-gold: #7e633b;
   width: 100%;
   max-width: 1280px;
   height: 15vh;
-  color: $dark-gold;
+  color: $light-gold;
   margin: 0 auto;
   line-height: 15vh;
   text-align: center;
@@ -19,6 +20,7 @@ $dark-gold: #7e633b;
   background-color: rgba($color: #000000, $alpha: 0.7);
   backdrop-filter: blur(10px);
   font-weight: 700;
+  padding-top: 30px;
 }
 
 .champions-list {
@@ -80,6 +82,10 @@ $dark-gold: #7e633b;
   }
 }
 @media (max-width: 320px) {
+  .nav-back {
+    height: 70px;
+    // background-color: rgba(26, 25, 34);
+  }
   .champions-list {
     height: 100%;
     width: 100%;
@@ -138,47 +144,199 @@ $dark-gold: #7e633b;
     }
   }
 }
-h1 {
-  color: white;
-}
-@media (min-width: 375px) and (max-width: 480px) {
+@media (min-width: 321px) and (max-width: 375px) {
   .nav-back {
     height: 50px;
-    background-color: black;
+    background-color: rgba(26, 25, 34);
   }
   .title {
-    font-size: 26px;
+    background-image: url("../navbar/logos/League-of-Info-s.png");
+    font-size: 0;
+    background-repeat: no-repeat;
+    background-position: center;
   }
-
   .champions-list {
     justify-content: center;
+
     .product {
-      margin: 2px;
-      width: 100px;
-      height: 100px;
-
-      font-size: 4px;
-      margin-top: 10px;
-
+      width: 20%;
+      height: 20%;
+      margin: 1%;
       .item {
+        width: 100%;
+        height: 5em;
         &__image {
-          width: 100px;
-          height: 100px;
+          width: 100%;
+          height: 100%;
           div {
-            font-size: 2.3em;
-            padding: 3px 0px;
+            font-size: 0.7em;
+            font-weight: 400;
+            height: 1.5em;
+            line-height: 1.5em;
           }
-          &:hover {
-            transform: scale(1.23, 1.14);
-            transition: 0.3s;
-            box-shadow: 1px 0px 70px 75px rgb(0, 0, 0);
-            div {
-              font-size: 12px;
-              line-height: 20px;
-              height: 20px;
-              transition: 0.3s;
-              text-shadow: 0px 0px 6px rgb(254, 254, 254);
-            }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 376px) and (max-width: 480px) {
+  .nav-back {
+    height: 50px;
+    background-color: rgba(26, 25, 34);
+  }
+  .title {
+    background-image: url("../navbar/logos/League-of-Info-m.png");
+    font-size: 0;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .champions-list {
+    justify-content: center;
+
+    .product {
+      width: 20%;
+      height: 20%;
+      margin: 1%;
+      .item {
+        width: 100%;
+        height: 5em;
+        &__image {
+          width: 100%;
+          height: 100%;
+          div {
+            font-size: 0.7em;
+            font-weight: 400;
+            height: 1.5em;
+            line-height: 1.5em;
+          }
+        }
+      }
+    }
+  }
+}
+@media (min-width: 481px) and (max-width: 720px) {
+  .nav-back {
+    height: 70px;
+    background-color: rgba(26, 25, 34);
+  }
+  .title {
+    padding-bottom: 30px;
+  }
+  .champions-list {
+    justify-content: center;
+
+    .product {
+      width: 20%;
+      height: 20%;
+      margin: 1%;
+      .item {
+        width: 100%;
+        height: 8em;
+        &__image {
+          width: 100%;
+          height: 100%;
+          div {
+            font-size: 0.9em;
+            font-weight: 400;
+            height: 1.5em;
+            line-height: 1.5em;
+          }
+        }
+      }
+    }
+  }
+}
+@media (min-width: 721px) and (max-width: 900px) {
+  .nav-back {
+    height: 70px;
+    background-color: rgba(26, 25, 34);
+  }
+  .title {
+    padding-bottom: 30px;
+  }
+  .champions-list {
+    justify-content: center;
+
+    .product {
+      width: 20%;
+      height: 20%;
+      margin: 1%;
+      .item {
+        width: 100%;
+        height: 8em;
+        &__image {
+          width: 100%;
+          height: 100%;
+          div {
+            font-size: 1em;
+            font-weight: 400;
+            height: 1.5em;
+            line-height: 1.5em;
+          }
+        }
+      }
+    }
+  }
+}
+@media (min-width: 901px) and (max-width: 1080px) {
+  .nav-back {
+    height: 70px;
+    background-color: rgba(26, 25, 34);
+  }
+  .title {
+    padding-bottom: 30px;
+  }
+  .champions-list {
+    justify-content: center;
+
+    .product {
+      width: 20%;
+      height: 20%;
+      margin: 1%;
+      .item {
+        width: 100%;
+        height: 12em;
+        &__image {
+          width: 100%;
+          height: 100%;
+          div {
+            font-size: 1.4em;
+            font-weight: 400;
+            height: 1.5em;
+            line-height: 1.5em;
+          }
+        }
+      }
+    }
+  }
+}
+@media (min-width: 1081px) and (max-width: 1440px) {
+  .nav-back {
+    height: 70px;
+    background-color: rgba(26, 25, 34);
+  }
+  .title {
+    padding-bottom: 30px;
+  }
+  .champions-list {
+    justify-content: center;
+
+    .product {
+      width: 20%;
+      height: 20%;
+      margin: 1%;
+      .item {
+        width: 100%;
+        height: 15em;
+        &__image {
+          width: 100%;
+          height: 100%;
+          div {
+            font-size: 1.7em;
+            font-weight: 400;
+            height: 1.5em;
+            line-height: 1.5em;
           }
         }
       }
