--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -89,49 +89,38 @@
 @media (max-width: 320px) {
   .navbar {
     height: 50px;
-    margin: 0 auto;
-    width: 95%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    width: 99%;
+    left: 0;
     .logo {
-      background-image: url("./logos/League-of-Info-mini.png");
-      background-position: center;
-      background-size: 20%;
-      background-repeat: no-repeat;
-      margin-left: 3%;
-      width: 50%;
-      height: 50px;
+      display: none;
     }
     .type-list {
       display: flex;
-      width: 20%;
-
+      width: 70%;
+      padding: 0;
       li {
         font-size: 4px;
-        font-weight: 500;
       }
     }
   }
 
   .input-container {
-    position: relative;
-    width: 20px;
+    width: 20%;
 
     input {
-      height: 0.5em;
+      height: 0.1em;
       width: 50%;
       &:valid ~ span,
       &:focus ~ span {
         color: #ccaa76;
-        transform: translateX(15px) translateY(-3px);
-        font-size: 0.1em;
-        padding: 0 10px;
+        transform: translateX(15px) translateY(1px);
+        font-size: 2px;
+        padding: 0 5px;
       }
     }
 
     span {
-      font-size: 4px;
+      font-size: 3px;
     }
   }
 }
@@ -141,14 +130,15 @@
     left: 0;
     right: 0;
     width: 99%;
-
+    .logo {
+      display: none;
+    }
     .type-list {
-      display: flex;
       width: 60%;
       padding-left: 20px;
       padding-right: 30px;
       li {
-        font-size: 6px;
+        font-size: 5px;
         font-weight: 700;
       }
     }
@@ -164,9 +154,9 @@
       &:valid ~ span,
       &:focus ~ span {
         color: #ccaa76;
-        transform: translateX(15px) translateY(-3px);
-        font-size: 0.1em;
-        padding: 0 10px;
+        transform: translateX(15px) translateY(1px);
+        font-size: 2px;
+        padding: 0px;
       }
     }
 
@@ -179,11 +169,11 @@
   .navbar {
     left: 0;
     right: 0;
-    margin: 0 auto;
+    // margin: 0 auto;
     height: 50px;
     width: 99%;
     .logo {
-      background-repeat: no-repeat;
+      display: none;
     }
     .type-list {
       width: 70%;
@@ -223,12 +213,15 @@
     margin: 0 auto;
     height: 70px;
     width: 95%;
-
+    .logo {
+      background-repeat: no-repeat;
+      width: 50%;
+    }
     .type-list {
       width: 70%;
-      padding: 0 10px;
+      padding: 0 20px;
       li {
-        font-size: 8px;
+        font-size: 7.5px;
       }
     }
   }
@@ -259,16 +252,10 @@
     height: 70px;
     width: 95%;
     .logo {
-      background-image: url("./logos/League-of-Info-s.png");
-      background-position: center;
-      background-size: 110%;
+      background-size: 100%;
       background-repeat: no-repeat;
-      margin-left: 3%;
-      width: 20%;
-      height: 50px;
     }
     .type-list {
-      display: flex;
       width: 70%;
       padding: 0 10px;
       li {
@@ -307,7 +294,6 @@
     width: 95%;
     .logo {
       background-image: url("./logos/League-of-Info-s.png");
-      background-position: center;
       background-size: 110%;
       background-repeat: no-repeat;
       margin-left: 3%;
@@ -316,7 +302,6 @@
     }
 
     .type-list {
-      display: flex;
       width: 70%;
       padding: 0 10px;
       li {
@@ -352,8 +337,7 @@
     height: 70px;
     .logo {
       background-image: url("./logos/League-of-Info-m.png");
-      background-position: center;
-      background-size: 100%;
+
       background-repeat: no-repeat;
       margin-left: 3%;
       width: 20%;
@@ -363,7 +347,6 @@
       display: flex;
       width: 70%;
       padding: 0 10px;
-
       li {
         font-size: 13px;
         font-weight: 700;
@@ -372,10 +355,7 @@
   }
 
   .input-container {
-    position: relative;
-
     width: 30%;
-
     input {
       height: 0.4em;
       width: 40%;
