--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -3,7 +3,9 @@
   max-width: 1540px;
   height: 100%;
   margin: 0 auto;
+  width: 100%;
 }
+
 // @media (max-width: 320px) {
 //   .layout {
 //     // background-color: white;
